--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,9 @@
     "background": {
         "service_worker": "background/bundle.js"
     },
+    "firefox:background": {
+        "scripts": ["background/bundle.js"]
+    },
     "action": {
         "default_popup": "popup/index.html",
         "default_icon": {
@@ -23,5 +26,10 @@
         "16": "icons/icon16.png",
         "48": "icons/icon48.png",
         "128": "icons/icon128.png"
+    },
+    "firefox:browser_specific_settings": {
+        "gecko": {
+            "id": "expire-tabs@vict0rsch"
+        }
     }
 }
