--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,10 +5,10 @@
     "description": "Automatically closes tabs that haven't been focused for a while.",
     "permissions": ["tabs", "storage", "alarms"],
     "background": {
-        "service_worker": "background/bundle.js"
+        "service_worker": "background/background.bundle.js"
     },
     "firefox:background": {
-        "scripts": ["background/bundle.js"]
+        "scripts": ["background/background.bundle.js"]
     },
     "action": {
         "default_popup": "popup/popup.html",
