🏗  build: Better scripts: watch & build

--- a/package.json
+++ b/package.json
@@ -4,12 +4,9 @@
     "description": "A simple browser (Chrome & Firefox) that closes your tabs after some time. The time taken into account is the time since the tab was last opened / focused.",
     "main": "src/background/main.js",
     "scripts": {
-        "build:js": "rollup -c rollup.config.mjs",
-        "watch:js": "rollup -c rollup.config.mjs -w",
-        "dev": "concurrently \"npm run watch:js\" \"extension dev src --browser=chrome\"",
-        "build": "npm run build:js && extension build src --browser=chrome && extension build src --browser=firefox",
-        "start": "npm run build:js && extension start src",
-        "pretest": "npm run build:js",
+        "build": "rollup -c rollup.config.mjs",
+        "watch": "rollup -c rollup.config.mjs -w",
+        "pretest": "npm run build",
         "test": "mocha test/**/*.mjs"
     },
     "repository": {
