--- a/src/manifest.json
+++ b/src/manifest.json
@@ -25,6 +25,7 @@
     "icons": {
         "16": "icons/icon16.png",
         "48": "icons/icon48.png",
+        "96": "icons/icon96.png",
         "128": "icons/icon128.png"
     },
     "firefox:browser_specific_settings": {
