--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "build": "rollup -c rollup.config.mjs",
         "watch": "rollup -c rollup.config.mjs -w",
         "pretest": "npm run build",
-        "test": "mocha test/**/*.mjs"
+        "test": "mocha test/**/*.mjs",
+        "pretest:glob": "npm run build",
+        "test:glob": "npx mocha"
     },
     "repository": {
         "type": "git",
