--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
             - name: Build
               run: npm run build
 
-    test:
+    test-chrome:
         needs: build
         runs-on: ubuntu-latest
         steps:
@@ -87,3 +87,32 @@ jobs:
 
             - name: Test
               run: npm test
+
+    test-firefox:
+        needs: build
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v4
+
+            - name: Setup Node.js
+              uses: actions/setup-node@v4
+              with:
+                  node-version: "20"
+
+            - name: Restore node_modules
+              id: cache-node-modules
+              uses: actions/cache@v4
+              with:
+                  path: node_modules
+                  key: ${{ runner.os }}-node_modules-${{ hashFiles('package-lock.json') }}
+
+            - name: Install dependencies
+              if: steps.cache-node-modules.outputs.cache-hit != 'true'
+              run: npm ci
+
+            - name: Install Puppeteer Browsers
+              run: npx puppeteer browsers install firefox
+
+            - name: Test
+              run: browser=firefox npm test
