--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
         "watch": "rollup -c rollup.config.mjs -w",
         "pretest": "npm run build",
         "test": "mocha test/**/*.mjs",
+        "pretest:firefox": "npm run build",
+        "test:firefox": "browser=firefox mocha test/**/*.mjs",
         "pretest:glob": "npm run build",
         "test:glob": "npx mocha"
     },
