--- a/src/manifest.json
+++ b/src/manifest.json
@@ -53,7 +53,10 @@
     },
     "firefox:browser_specific_settings": {
         "gecko": {
-            "id": "expire-tabs@vict0rsch"
+            "id": "expire-tabs@vict0rsch",
+            "data_collection_permissions": {
+                "required": ["none"]
+            }
         }
     }
 }
