--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,6 +22,13 @@
         "page": "options/options.html",
         "open_in_tab": true
     },
+    "content_scripts": [
+        {
+            "matches": ["<all_urls>"],
+            "js": ["content/content.bundle.js"],
+            "run_at": "document_idle"
+        }
+    ],
     "icons": {
         "16": "icons/icon16.png",
         "48": "icons/icon48.png",
